# avarr

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
api/: README.md  apply_migration.py  main.py  pyproject.toml
api/avarr/: __init__.py  app.py  database.py  download_manager.py  models.py  notifier.py  settings.py  transcoder.py
api/avarr/api/: __init__.py  jobs.py  telegram.py
api/migrations/: 001_add_watched_starred.sql  002_add_source_url_index.sql  README.md
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  api.ts  index.css
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  carousel.tsx  input.tsx  label.tsx  separator.tsx  textarea.tsx
